# eCommCart_QA

./: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run_behave.py
.github/workflows/: ecomm_workflow.yaml
Features/: environment.py
Features/Feature_files/: AddToCart.feature  CartValidation.feature  api_testing.feature  login.feature
Features/steps/: AddToCart.py  CartValidation.py  api_testing.py  login.py
Pages/: cart_page.py  login_page.py  products_page.py
tests/test_data/: apiLocation.json  products.json
utils/: api_helpers.py  env.py  logger.py
